# win_capture

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
assets/: my.json
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: win_capture.dart  win_capture_method_channel.dart  win_capture_platform_interface.dart
linux/: CMakeLists.txt  win_capture_plugin.cc
linux/include/win_capture/: win_capture_plugin.h
macos/: win_capture.podspec
macos/Classes/: WinCapturePlugin.swift
snap_library/: CMakeLists.txt  snap.c  snap.def  snap.h
test/: win_capture_method_channel_test.dart  win_capture_test.dart
windows/: CMakeLists.txt  win_capture_plugin.cpp  win_capture_plugin.h  win_capture_plugin_c_api.cpp
windows/include/win_capture/: win_capture_plugin_c_api.h
